<resources>
    <string name="app_name">Blší cirkus</string>
    <string name="menu1">Level 1</string>
    <string name="menu2">Level 2</string>
    <string name="menu3">Level 3</string>
    <string name="menu4">Level 4</string>
    <string name="menu5">Level 5</string>
    <string name="menu6">Level 6</string>
    <string name="empty" />
    <string name="back">SPÄŤ</string>
    <string name="verify">OVERIŤ</string>
    <string name="reset1">VYMAZAŤ</string>
    <string name="editor1">Skúsiť</string>
    <string name="title">BLŠÍ CIRKUS</string>
</resources>